# mock-it

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  coverage.sh
.github/workflows/: publish.yml  test.yml
ci/: publish.sh
examples/: README.md  any.rs  factory.rs  multiple_inputs.rs  pokemon.rs  repository.rs  tokio.rs
mock-it_codegen/: Cargo.toml  README.md
mock-it_codegen/src/: generics.rs  lib.rs  mock_fn.rs  trait_method.rs
mock-it_codegen/src/generics/: gen.rs  gen_trait.rs  mod.rs
mock-it_codegen/src/trait_method/: mod.rs
src/: given.rs  input.rs  lib.rs  macros.rs  matcher.rs  mock.rs  output.rs  return_value.rs  rule.rs  validator.rs  when.rs
tests/: codegen_async_trait.rs  codegen_default.rs  codegen_generic_trait.rs  codegen_mock_impl_debug.rs  codegen_mock_support_partial_eq.rs  codegen_no_return.rs  codegen_panic_message.rs  codegen_reference_not_sized.rs  codegen_reference_sized.rs  integration_test.rs  proc_macro.rs  reference_inputs.rs
