[package]
name = "mock-it"
version = "0.3.0"
authors = ["nathanielsimard <nathaniel.simard@outlook.com>"]
description = "Make mocking reliable"
repository = "https://github.com/nathanielsimard/mock-it"
license = "MIT"
readme="README.md"
keywords = ["mock", "mocking", "unit-test", "testing"]
categories = ["development-tools::testing"]
edition = "2018"

[dependencies]
mock-it_codegen = { version = "0.1.0", path = "./mock-it_codegen" }

[dev-dependencies]
table-test = "0.2.1"
