[package]
name = "mock-it"
version = "0.4.0"
authors = ["nathanielsimard <nathaniel.simard@outlook.com>"]
description = "Make mocking reliable"
repository = "https://github.com/nathanielsimard/mock-it"
license = "MIT"
readme="README.md"
keywords = ["mock", "mocking", "unit-test", "testing"]
categories = ["development-tools::testing"]
edition = "2021"

[dependencies]
mock-it_codegen = { version = "0.2.0", path = "./mock-it_codegen" }

[dev-dependencies]
table-test = "0.2.1"
