[package]
name = "mock-it"
version = "0.7.0"
authors = ["nathanielsimard <nathaniel.simard@outlook.com>"]
description = "Make mocking reliable"
repository = "https://github.com/nathanielsimard/mock-it"
license = "MIT"
readme="README.md"
keywords = ["mock", "mocking", "unit-test", "testing"]
categories = ["development-tools::testing"]
edition = "2021"

[dependencies]
mock-it_codegen = { version = "0.7.0", path = "./mock-it_codegen" }

[dev-dependencies]
async-trait = "0.1.5"
table-test = "0.2.1"
tokio = { version = "1", features = ["full"] }
